cmake_minimum_required(VERSION 3.5.1)
project(storage_node_test)
add_definitions(-std=c++11)
#set(BOOST_ROOT $ENV{HOME}/opt/boost/)
#set(BOOST_COMPONENTS system thread program_options)
#set(BOOST_INCLUDEDIR $ENV{HOME}/opt/boost/include)
#find_package(Boost REQUIRED COMPONENTS ${BOOST_COMPONENTS})
#add_subdirectory(util)
#add_subdirectory(tcp-client)
#add_subdirectory(tcp-server)
add_subdirectory(example)